--- a/OrdersWeb.Api/OrdersWeb.Api.csproj
+++ b/OrdersWeb.Api/OrdersWeb.Api.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.1.44" />
+  </ItemGroup>
+
 </Project>
